# color_extractor

./: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/color_extractor_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ffi/: color_extractor.c  color_extractor.h
ffi/cmake/: CMakeLists.txt  version_script.ld
ios/: color_extractor.podspec
ios/Classes/: color_extractor.c
lib/: color_extractor.dart  color_extractor_bindings_generated.dart
lib/src/: bindings.dart  color_extractor.dart  color_processor.dart  image_converter.dart  isolate_manager.dart  models.dart  native_bridge.dart
lib/src/adapters/: analysis_image_adapter.dart  asset_image_adapter.dart  memory_image_adapter.dart  network_image_adapter.dart
lib/src/interfaces/: i_color_processor.dart  i_image_converter.dart  i_isolate_manager.dart  i_native_bridge.dart  image_source.dart
lib/src/logger/: app.logger.dart  logger_mixin.dart
lib/src/utils/: utils.dart
src/: CMakeLists.txt  color_extractor.c
test/: color_processor_test.dart  image_converter_test.dart  isolate_manager_test.dart  native_bridge_test.dart
test/mocks/: mocks.dart  mocks.mocks.dart
